--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Benedict Wilmes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -15,13 +16,17 @@
 <body>
 
 
-    <!-- весь контейнер главный -->
+    
     <div class="container py-3">
+
+
+
+        <!-- Навбар -->
         <header>
             <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-                <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+                <!-- <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
                     <img src="{%static 'assets/logo.png'%}" alt="" style="width: 100px;">
-                </a>
+                </a> -->
 
                 <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                     <a class="me-3 py-2 text-dark text-decoration-none" href="#main">Главная</a>
@@ -33,37 +38,45 @@
         </header>
 
 
-<!-- херо главная -->
-        <div class=" text-center">
-            <img class="d-block mx-auto mb-4" src="{% static 'assets/logo.png' %}" alt="" width="250">
-            <h1 class="display-5 fw-bold">Применение скелетной опоры в ортодонтии</h1>
-            <div class="col-lg-6 mx-auto">
-              <!-- <p class="lead mb-4">Сложные ортодонтические случаи</p> -->
-              <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <!-- <button type="button" class="btn btn-outline-primary btn-lg mt-2 px-4 gap-3">Записаться на курс</button> -->
-              </div>
-            </div>
-          </div>
 
 
-<!-- hero benedict -->     
-        <div class="p-5 rounded-3" id="main">
-            <!-- <h1 class="fw-bold"> Сложные ортодонтические случаи
-                Применение скелетной опоры </h1> -->
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-              <div class="col-10 col-sm-8 col-lg-6">
-                <img src="{% static 'assets/img/bene.png'%}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy">
-              </div>
-              <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Профессор Benedict Wilmes</h1>
-                <p class="lead">Легендарный доктор, который направляет и ведет современную западную ортодонтию. <br> Главный мировой эксперт по скелетным опорам.</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2"> <a href="#program" style="text-decoration: none; ">Программа</a> </button>
-                  <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Связаться</button>
-                </div>
-              </div>
-            </div>
-          </div>  
+
+       
+
+
+
+
+
+
+
+
+
+<!-- херо главная benedict-->
+<div class="row mt-5 mb-4" id="main">
+    <div class="col-md-6">
+        <img class="d-block mb-4" src="{% static 'assets/logo.png' %}" alt="" width="250">
+        <h2 class="display-5 fw-bold mycolor1 mb-4">Применение скелетной опоры в ортодонтии</h2>
+        <br> 
+
+
+        <h1 class="display-5 fw-bold lh-1 mb-3 mt-4 mycolor2">Профессор Benedict Wilmes</h1>
+        <p class="lead">Легендарный доктор, который направляет и ведет современную западную ортодонтию. <br> Главный мировой эксперт по скелетным опорам.</p>
+        <button type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2"> <a href="#program" style="text-decoration: none; ">Программа</a> </button>
+        <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Связаться</button>
+    </div>
+    
+    
+    
+    
+    <div class="col-md-6">
+        <img src="{% static 'assets/img/bene.png'%}" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" height="400" loading="lazy">
+    </div>
+
+    
+
+
+</div>
+
 
 
 
