--- a/templates/index.html
+++ b/templates/index.html
@@ -301,7 +301,7 @@
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm border-primary">
                         <div class="card-header py-3 text-bg-primary border-primary">
-                            <h4 class="my-0 fw-normal">Позднаяя регистрация</h4>
+                            <h4 class="my-0 fw-normal">Поздняя регистрация</h4>
                         </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title">$699<small class="text-muted fw-light"></small>
