--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         <h1 class="display-5 fw-bold lh-1 mb-3 mt-4 mycolor2">Профессор Benedict Wilmes</h1>
         <p class="lead">Легендарный доктор, который направляет и ведет современную западную ортодонтию. <br> Главный мировой эксперт по скелетным опорам. <br>24-25 февраля 2023</p>
         <button type="button" class="btn btn-outline-primary btn-lg px-4 me-md-2"> <a href="#program" style="text-decoration: none; ">Программа</a> </button>
-        <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Зарегистрироваться</button>
+        <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Регистрация</button>
     </div>
     
     
